[package]
name = "nescookie"
version = "0.3.0"
edition = "2021"
description = "a netscape cookie file parser"
license = "MIT"
repository = "https://github.com/snylonue/nescookie"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cookie = "0.16"
time = "^0.3"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "nescookie"
harness = false